Remove vim bindings for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,18 +12,16 @@ bind - split-window -v
 # Enable mouse control
 set -g mouse on
 
-# Use vi keybindings
-# set -g mode-keys vi
-
-# List of plugins
+# TPM plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+# tmux-tokyo-night customizations
 set -g @theme_enable_icons 0
 set -g @theme_plugins 'datetime'
 set -g @theme_plugin_datetime_format '%Y-%m-%d %I:%M %p'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TPM
 run '~/.tmux/plugins/tpm/tpm'
