Switch theme to catppuccin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,13 +15,19 @@ set -g mouse on
 # TPM plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# tmux-tokyo-night customizations
-set -g @theme_enable_icons 0
-set -g @theme_plugins 'datetime'
-set -g @theme_plugin_datetime_format '%Y-%m-%d %I:%M %p'
+# Theme customizations
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator ""
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_status_modules_right "session date_time"
 
 # Initialize TPM
 run '~/.tmux/plugins/tpm/tpm'
