--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -9,6 +9,9 @@ TERM = "xterm-256color"
 dynamic_padding = false
 opacity = 0.9
 option_as_alt = "Both"
+[window.padding]
+x = 16
+y = 16
 
 [font]
 size = 18
