--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,7 @@ trim_trailing_whitespace = true
 [*.lua]
 indent_size = 2
 tab_width = 2
+
+[{*.js,*.jsx,*.ts,*.tsx}]
+indent_size = 2
+tab_width = 2
