--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = ["~/.config/alacritty/catppuccin-mocha.toml"]
-
-live_config_reload = true
 
 [env]
 TERM = "xterm-256color"
@@ -31,3 +28,12 @@ style = "Medium Italic"
 [font.normal]
 family = "SauceCodePro Nerd Font"
 style = "Medium"
+
+[general]
+live_config_reload = true
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
+
+[[keyboard.bindings]]
+key = "Back"
+mods = "Super"
+chars = "\u0015"
