--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [include]
-  path = ~/.gitconfig.local
+  path = ~/.local.gitconfig
 [core]
   excludesfile = ~/.gitignore_global
   quotepath = false
